# LibraryManagementConsole

./: .gitignore  CMakeLists.txt  LibraryManagement.sln
LibraryManagement/: BOOKS.txt  BOOK_LOANS.txt  Book.cpp  Book.h  BookLoanSlip.cpp  BookLoanSlip.h  BookReturnSlip.cpp  BookReturnSlip.h  Common.cpp  Common.h  DateUtil.cpp  DateUtil.h  Globals.cpp  Globals.h  LibraryManagement.cpp  LibraryManagement.vcxproj  LibraryManagement.vcxproj.filters  Main.cpp  Main.h  MainMenu.cpp  MainMenu.h  READERS.txt  Reader.cpp  Reader.h  ReaderCard.cpp  ReaderCard.h  ReaderMenu.cpp  ReaderMenu.h  Statistics.cpp  Statistics.h  VariadicTable.h
